[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Futura Condensed Extra Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://addons/native_dialogs/bin/native_dialog_message.gdns" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.1875
anchor_top = 0.156667
anchor_right = 0.8125
anchor_bottom = 0.266667
margin_bottom = -1.52588e-05
custom_fonts/font = SubResource( 1 )
text = "Pokemon Manager"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.304688
anchor_top = 0.293333
anchor_right = 0.695313
anchor_bottom = 0.92
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Reset" type="Button" parent="Panel/VBoxContainer"]
margin_right = 399.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -64.0
margin_right = 136.0
margin_bottom = -16.0
text = "Back"

[node name="NativeDialogMessage" type="Node" parent="."]
script = ExtResource( 3 )
title = "Are you sure?"
icon = 1

[connection signal="pressed" from="Panel/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="result_selected" from="NativeDialogMessage" to="." method="_on_NativeDialogMessage_result_selected"]
